# IESP32

./: .gitignore  CMakeLists.txt  README.md  readme.md
CMAKE-ESP32/: CMakeLists.txt  CMakeLists_.txt
CMAKE-ESP32/FactoryTest/: CMakeLists.txt  FactoryTest.cpp
ESP-IDF-ESP32/: README.md  sdkconfig  sdkconfig.old
ESP-IDF-ESP32-DISPLAY/: sdkconfig
ESP-IDF-ESP32-DISPLAY/main/: pretty_effect.c  spi_master_example_main.c
ESP-IDF-ESP32-IMAGE/: sdkconfig
ESP-IDF-ESP32-IMAGE/components/display_common/: display_common.c
ESP-IDF-ESP32-IMAGE/components/display_effect/: CMakeLists.txt  spi_master_display_effect.c
ESP-IDF-ESP32/components/blink/: CMakeLists.txt
ESP-IDF-ESP32/components/spi_master/: CMakeLists.txt  spi_display.c
ESP-IDF-ESP32/main/: CMakeLists.txt  decode_image.c  main.c  spi_disaply.h  spi_master_example_main.c
ESP32_BiJin_ToKei (copy)/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32_BiJin_ToKei (copy)/main/: CMakeLists.txt
ESP32_BiJin_ToKei/main/: Kconfig.projbuild  bijin_tokei.c
IESP32-TTGO/: CMakeLists.txt  readme.md
IESP32-TTGO/FactoryTest/: CMakeLists.txt
PIO-ESP32-FacotryTest/: .gitignore  platformio.ini
ble_gatt_client/: sdkconfig
ble_gatt_server/: sdkconfig
ble_ibeacon/: sdkconfig
components/httpclient/: CMakeLists.txt  myhttpclient.c  myhttpclient.h
components/mywifi/: CMakeLists.txt  mywifi.c
components/nvs/: CMakeLists.txt  mynvs.c
components/oled/: CMakeLists.txt  myoled.c  myoled.h
http2_request/: sdkconfig
main/: main.c
uart_echo/: sdkconfig
wifi_station/: sdkconfig
(+22 files in other folders)
